Huge refactoring in the make package (around ModuleMaker)